--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,6 +4,7 @@
 }
 
 html{
+    background-color: black;
     background-image: url('https://i.pinimg.com/originals/03/d1/ff/03d1ff9e5d74945780928c8b4ad20787.jpg');
     background-repeat: no-repeat;
     background-size: cover;
